firebase não está achando o socket.io

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/socket.io/**",
+        "destination": "/socket.io/socket.io.js"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
