--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JuhhSobrinho/Chat-Minutos.git"
+    "url": "git+https://github.com/JuhhSobrinho/Chat-Minutos"
   },
   "author": "juliano Sobrinho",
   "license": "ISC",
