--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
-[build]
-  functions = "/.netlify/functions/server/:splat"
+[[redirects]]
+  from = "/meu-caminho/*"
+  to = "/.netlify/functions/server/:splat"
+  status = 200
 [[redirects]]
   from = "/*"
   to = "/public/:splat"
