--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,15 @@
   from = "/socket.io/*"
   to = "/.netlify/functions/server/:splat"
   status = 200
+
 [[redirects]]
   from = "/*"
   to = "/public/:splat"
   status = 200
 
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
